--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,11 +94,22 @@ body {
   small * {
     @apply text-sm font-medium md:text-base;
   }
+  :is(h1, h2, h3, h4, h5, h6) {
+    & > em {
+      @apply text-gradient-500 not-italic;
+    }
+    & > span {
+      color: var(--tw-prose-counters);
+    }
+  }
 }
 
 @layer utilities {
-  .bg-gradient-omega-900 {
-    @apply bg-gradient-to-r from-omega-900 to-omega-800;
+  .text-gradient-500 {
+    @apply bg-gradient-to-br from-cyan-500 to-indigo-500 bg-clip-text text-transparent;
+  }
+  .bg-gradient-zinc-900 {
+    @apply bg-gradient-to-r from-zinc-900 to-zinc-800;
   }
   .with-back-plate {
     @apply relative mb-2 -translate-x-2 md:mb-2 md:-translate-x-2;
