--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,3 +52,105 @@
     color: var(--color-brand-100);
   }
 }
+
+/* Prose/Typography Styles for Blog */
+@layer components {
+  .prose {
+    max-width: 65ch;
+    line-height: 1.75;
+  }
+
+  .prose p {
+    margin-top: 1.25em;
+    margin-bottom: 1.25em;
+  }
+
+  .prose h2 {
+    font-size: 1.5em;
+    font-weight: 700;
+    margin-top: 2em;
+    margin-bottom: 1em;
+    line-height: 1.33;
+    color: var(--color-gray-900);
+  }
+
+  .dark .prose h2 {
+    color: white;
+  }
+
+  .prose h3 {
+    font-size: 1.25em;
+    font-weight: 600;
+    margin-top: 1.6em;
+    margin-bottom: 0.6em;
+    line-height: 1.6;
+    color: var(--color-gray-900);
+  }
+
+  .dark .prose h3 {
+    color: white;
+  }
+
+  .prose ul, .prose ol {
+    margin-top: 1.25em;
+    margin-bottom: 1.25em;
+    padding-left: 1.625em;
+  }
+
+  .prose ul {
+    list-style-type: disc;
+  }
+
+  .prose ol {
+    list-style-type: decimal;
+  }
+
+  .prose li {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+  }
+
+  .prose strong {
+    font-weight: 600;
+    color: var(--color-gray-900);
+  }
+
+  .dark .prose strong {
+    color: white;
+  }
+
+  .prose em {
+    font-style: italic;
+  }
+
+  .prose a {
+    color: var(--color-brand-600);
+    text-decoration: underline;
+  }
+
+  .dark .prose a {
+    color: var(--color-brand-500);
+  }
+
+  .prose hr {
+    margin-top: 3em;
+    margin-bottom: 3em;
+    border-color: var(--color-gray-200);
+  }
+
+  .dark .prose hr {
+    border-color: var(--color-gray-700);
+  }
+
+  .prose code {
+    font-family: var(--font-mono);
+    font-size: 0.875em;
+    background-color: var(--color-gray-100);
+    padding: 0.2em 0.4em;
+    border-radius: 0.25rem;
+  }
+
+  .dark .prose code {
+    background-color: var(--color-gray-800);
+  }
+}
